# RDT_protocol

./: CMakeLists.txt  README.md
src/: altBit.c  goBackN.c  selectiveRepeat.c
test/: script.py
